# tampines-steam-tables

./: .gitignore  Cargo.toml  README.md
docs/derivation/: derivation.tex  fanno-rayleigh-line-plotter.tex  library.bib
examples/depressurisation/: main.rs
examples/fhr_sim_v1/: main.rs
examples/fhr_sim_v2/: main.rs
examples/transient_rankine_cycle/: main.rs
src/: lib.rs  prelude.rs
src/backward_eqn_hs_region_1_to_4/: boundary_eqn_h1_prime.rs  mod.rs  region_1_and_3.rs  region_2_and_3.rs  saturated_liquid_line.rs  saturated_vapour_line.rs
src/backward_eqn_ph_region_1_to_4/: boundary_eqn_ps3.rs  mod.rs
src/backward_eqn_ps_region_1_to_4/: boundary_eqn_ps3.rs  mod.rs
src/constants/: mod.rs
src/dielectric_constant/: mod.rs  tests.rs
src/dynamic_viscosity/: mod.rs  tests.rs
src/fhr_sim_debugging_tests/: mod.rs  pool_boiling.rs
src/interfaces/: mod.rs
src/openfoam_algorithms/: mod.rs
src/region_1_subcooled_liquid/: gamma_derivatives.rs  gamma_dimensionless_specific_gibbs_free_energy.rs  intensive_properties.rs  mod.rs
src/region_2_saturated_water/: dimensionless_tau_and_pi.rs  gamma_dimensionless_specific_gibbs_free_energy.rs  gamma_ideal_gas_plus_derivatives.rs  gamma_residual_plus_derivatives.rs  intensive_properties.rs  mod.rs
src/region_2_vapour/: gamma_ideal_gas_plus_derivatives.rs  intensive_properties.rs  mod.rs
src/region_3_single_phase_plus_supercritical_steam/: aux_eqn_boundary_region_2_and_region_3.rs  dimensionless_tau_and_delta.rs  mod.rs  phi_deriviatives.rs
src/region_3_vap_liq_mixture/: mod.rs
src/surface_tension/: mod.rs  (+1 more)
(+283 files in other folders)
