[package]
name = "tampines-steam-tables"
version = "0.1.1"
edition = "2021"

license = "Apache-2.0"
description = "Steam Tables for the TAMPINES Library"
homepage = "https://github.com/theodoreOnzGit/tampines-steam-tables"
repository ="https://github.com/theodoreOnzGit/tampines-steam-tables"
readme = "README.md"
categories = ["science"]

[dependencies]
uom = "0.36.0"

[dev-dependencies]
approx = "0.5.1"


